revert: remove zigzag layout, back to original

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="section about section-left">
+    <section id="about" class="section about">
         <div class="container">
             <h2 class="section-title">
                 <span class="title-number">01.</span>
@@ -141,7 +141,7 @@
     </section>
 
     <!-- Experience Section -->
-    <section id="experience" class="section experience section-right">
+    <section id="experience" class="section experience">
         <div class="container">
             <h2 class="section-title">
                 <span class="title-number">02.</span>
@@ -312,7 +312,7 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="section projects section-left">
+    <section id="projects" class="section projects">
         <div class="container">
             <h2 class="section-title">
                 <span class="title-number">03.</span>
@@ -433,7 +433,7 @@
     </section>
 
     <!-- Certifications Section -->
-    <section id="certifications" class="section certifications section-right">
+    <section id="certifications" class="section certifications">
         <div class="container">
             <h2 class="section-title">
                 <span class="title-number">04.</span>
@@ -602,7 +602,7 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="section skills section-left">
+    <section id="skills" class="section skills">
         <div class="container">
             <h2 class="section-title">
                 <span class="title-number">05.</span>
@@ -686,7 +686,7 @@
     </section>
 
     <!-- Languages Section -->
-    <section id="languages" class="section languages section-right">
+    <section id="languages" class="section languages">
         <div class="container">
             <h2 class="section-title">
                 <span class="title-number">06.</span>
@@ -722,7 +722,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="section contact section-left">
+    <section id="contact" class="section contact">
         <div class="container">
             <h2 class="section-title">
                 <span class="title-number">07.</span>
